# wannarust

./: Dockerfile  Makefile  README.md  encryption.key
infection/: data.csv  text.doc
infection/deep_folder/: secret.docx
wannarust/: Cargo.toml
wannarust/src/: decrypt.rs  encrypt.rs  generate_keys.rs  get_files.rs  main.rs  parse_args.rs
