[package]
name = "wannarust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
aes = "0.8"
cipher = "0.4"
block-padding = "0.3"
hex = "0.4"
rand = "0.9.2"
rand_core = "0.9.3"
cbc = "0.1.2"
rfc-4226 = "0.2.0"
rsa = "0.9.8"
sha2 = "0.10.9"
walkdir = "2.5.0"
